corrected styling for the html to align items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-p{
+/* p{
   font-weight: bold;
   font-size:120%;
 }
@@ -21,7 +21,7 @@ p{
 #searchtxt{
   font-style:bold;
   color: rgb(255, 241, 115)
-}
+} */
 
 
 
